@@ -2,11 +2,12 @@
 -----
 1. Use 'number' type for integer input fields.
 2. Count tracks when analysis completes.
-3. Add a button to update ignore, even if no tracks have been added.
+3. Add button to update ignore, even if no tracks have been added.
 4. Show number of 'ignored' tracks in settings page.
 5. Use UTF-8 for ignore text file.
 6. Make failures label in settings a link to download CSV of failed tracks and
    reasons.
+7. Add button to clear failures from DB.
 
 0.8.1
 -----
